--- a/RScripts/CO2_Corrected.Rmd
+++ b/RScripts/CO2_Corrected.Rmd
@@ -124,7 +124,8 @@ for (site in site_names){
 ```{r check CO2 data plot, echo=FALSE}
 
 ##check data
-plot_ly(CO2_01, x = ~DateTime, y = ~ppm, type = 'scatter', mode = 'markers') 
+plot_ly(CO2_01%>%
+  filter(DateTime < as.POSIXct("2021-07-30 07:27:00", tz = "UTC")), x = ~DateTime, y = ~ppm, type = 'scatter', mode = 'markers') 
 
 ```
 clean data
@@ -189,8 +190,8 @@ CO2_Well01 <- CO2_Well01 %>%
 
 #CO2_Well02
 CO2_Well02 <- CO2_Well02 %>%
-  filter(DateTime < as.POSIXct("2021-06-14 11:36:00", tz = "UTC") | DateTime > as.POSIXct("2021-06-17 07:21:00", tz = "UTC")) %>%
-  filter(DateTime < as.POSIXct("2021-06-17 20:21:00", tz = "UTC") | DateTime > as.POSIXct("2021-06-18 08:21:00", tz = "UTC"))%>%
+  filter(DateTime > as.POSIXct("2021-06-29 11:00:00", tz = "UTC")) %>%
+#  filter(DateTime < as.POSIXct("2021-06-17 20:21:00", tz = "UTC") | DateTime > as.POSIXct("2021-06-18 08:21:00", tz = "UTC"))%>%
   filter(DateTime != as.POSIXct("2021-06-30 15:15:00", tz = "UTC")) %>%
   filter(DateTime != as.POSIXct("2021-07-02 12:00:00", tz = "UTC")) %>%
   filter(DateTime < as.POSIXct("2021-10-02 21:45:00", tz = "UTC") | DateTime > as.POSIXct("2021-10-20 13:15:00", tz = "UTC"))
