--- a/KriddieFolder/ANTE_Geomorphology_2021-10-11.Rmd
+++ b/KriddieFolder/ANTE_Geomorphology_2021-10-11.Rmd
@@ -35,10 +35,11 @@ Geomorph$dist <- NULL
 
 Geomorph <- Geomorph[,c("lon","lat","ele","time","lat_wypt","lon_wypt","ele_wypt")]
 
-synop <- read.csv(here::here("Synoptic/ANTE_2021-08-27_withDOC.csv"))
+synop <- read.csv(here::here("Synoptic/ANTE_2022-01-09.csv"))
 synop$X <- NULL
 synop$Date.as.fact <- NULL
-colnames(synop) <- c("lon","lat","ele","Date","EOS_no","Flux_ave","Tract","Point","CO2_ppm_ave")
+synop$ID <- NULL
+colnames(synop) <- c("lon","lat","ele","Date","EOS_no","Flux_ave","Tract","Point","CO2_ppm_ave","DateTime","SampleID","DOC","TDN","Notes")
 
 
 #there is a bad elevation data in synop, I am replacing it here, but need to work on figuring out what is up
@@ -322,7 +323,7 @@ coords_df <- snap_df@coords
 pred <- as.data.frame(coords_df)
 synop$lon_fit <- pred$lon
 synop$lat_fit <- pred$lat
-synop <- synop[,c("Date","EOS_no","Flux_ave","Tract","Point","CO2_ppm_ave","lon_fit","lat_fit")]
+synop <- synop[,c("Date","EOS_no","Flux_ave","Tract","Point","CO2_ppm_ave","DOC","TDN","lon_fit","lat_fit")]
 
 
 df_prediction <- full_join(df_prediction,synop,by=c("lon_fit","lat_fit"))
