--- a/KriddieFolder/ANTE_Geomorphology_2021-10-11.Rmd
+++ b/KriddieFolder/ANTE_Geomorphology_2021-10-11.Rmd
@@ -331,7 +331,28 @@ df_prediction <- full_join(df_prediction,synop,by=c("lon_fit","lat_fit"))
 #Geomorph <- full_join(Geomorph,synop_2, by = c("lon_fit","lat_fit"))
 
 ```
+```{r snap waterchem pts}
 
+WaterChem <- read.csv(here::here("/WaterChem/WaterChem_synoptic_2022-01-28.csv")) %>% filter (Wetland == "ANTE")%>%drop_na(lat)
+WaterChem <- WaterChem[,c("lon","lat","DOC","TDN")]
+
+x <- SpatialPoints(WaterChem[,c(1:2)])
+y <- SpatialPoints(df_prediction[,c(1:2)]) 
+plot(x, col = "red")
+points(y, col = "green")
+snap = apply(spDists(x, y), 1, which.min)
+points(y[snap,], pch = 3)
+
+
+snap_df <- y[snap,]
+coords_df <- snap_df@coords
+pred <- as.data.frame(coords_df)
+WaterChem$lon_fit <- pred$lon
+WaterChem$lat_fit <- pred$lat
+WaterChem <- synop[,c("DOC","TDN","lon_fit","lat_fit")]
+
+
+```
 ##calculate distance between each coordinate.
 Here's the deal. We need to calcualte the distance between each coordinate 
 
@@ -413,8 +434,18 @@ ggplot(data=df_prediction%>%drop_na(Flux_ave), aes(dist, ele_fit, color=log10(ad
 ```
 
 ```{r write, echo=FALSE}
+df_prediction$DOC <- NULL
+df_prediction$TDN <- NULL
 
-write.csv(df_prediction, here::here("ProcessedData/ANTE_synoptic_2022-01-27.csv"))
+write.csv(df_prediction, here::here("ProcessedData/ANTE_synoptic_2022-01-29.csv"))
+
+df_prediction_join <- df_prediction[,c("lon_fit","lat_fit","dist","ele_fit","Date")]
+
+WaterChem2 <- left_join(WaterChem,df_prediction_join,by=c("lon_fit","lat_fit"))
+WaterChem2 <- unique(WaterChem2)%>%drop_na(DOC)
+
+write.csv(WaterChem2, here::here("ProcessedData/ANTE_WaterChem_synop_2022-01-29.csv"))
+
 ```
 
 
@@ -423,7 +454,7 @@ write.csv(df_prediction, here::here("ProcessedData/ANTE_synoptic_2022-01-27.csv"
 i said plot it!
 ```{r plot that fucker, echo=FALSE}
 
-<<<<<<< HEAD
+
 
 fit <- loess(ele ~ dist, degree=2, span = 0.30, data=df_prediction)
 
