--- a/KriddieFolder/ANTE_Geomorphology_2021-10-11.Rmd
+++ b/KriddieFolder/ANTE_Geomorphology_2021-10-11.Rmd
@@ -37,7 +37,8 @@ Geomorph <- Geomorph[,c("lon","lat","ele","time","lat_wypt","lon_wypt","ele_wypt
 
 #synop <- read.csv(here::here("Synoptic/ANTE_2022-01-09.csv"))
 #synop <- read.csv(here::here("Synoptic/ANTE_2022-01-27.csv"))
-synop <- read.csv(here::here("Synoptic/ANTE_2022-02-11.csv"))
+#synop <- read.csv(here::here("Synoptic/ANTE_2022-02-11.csv"))
+synop <- read.csv(here::here("Synoptic/ANTE_2022-02-13.csv"))
 
 synop$X <- NULL
 synop$ID <- NULL
@@ -438,14 +439,14 @@ ggplot(data=df_prediction%>%drop_na(Flux_ave), aes(dist, ele_fit, color=log10(ad
 df_prediction$DOC <- NULL
 df_prediction$TDN <- NULL
 
-write.csv(df_prediction, here::here("ProcessedData/ANTE_synoptic_2022-02-11.csv"))
+write.csv(df_prediction, here::here("ProcessedData/ANTE_synoptic_2022-02-13.csv"))
 
 df_prediction_join <- df_prediction[,c("lon_fit","lat_fit","dist","ele_fit","Date")]
 
 WaterChem2 <- left_join(WaterChem,df_prediction_join,by=c("lon_fit","lat_fit"))
 WaterChem2 <- unique(WaterChem2)%>%drop_na(DOC)
 
-write.csv(WaterChem2, here::here("ProcessedData/ANTE_WaterChem_synop_2022-01-29.csv"))
+write.csv(WaterChem2, here::here("ProcessedData/ANTE_WaterChem_synop_2022-02-13.csv"))
 
 ```
 
