synop script updates

--- a/KriddieFolder/GAVI_Geomorphology_2022-01-27.Rmd
+++ b/KriddieFolder/GAVI_Geomorphology_2022-01-27.Rmd
@@ -68,7 +68,7 @@ synop <- read.csv(here::here("Synoptic/GAVI_2022-01-27.csv"))
 synop$X <- NULL
 
 colnames(synop) <- c("lon","lat","Date","EOS_no","Flux_ave", "Tract","Point","VaisalaType","CO2_ppm_ave","WaterTemp_c","BaroPress_kpa","AirTemp_c","Total_hPa","adjusted_ppm")
-synop <- synop[,c("lat","lon","Date","EOS_no","Flux_ave", "Tract","Point","CO2_ppm_ave","adjusted_ppm")]
+synop <- synop[,c("lat","lon","Date","EOS_no","Flux_ave", "Tract","Point","VaisalaType","CO2_ppm_ave","WaterTemp_c","BaroPress_kpa","AirTemp_c","Total_hPa","adjusted_ppm")]
 
 Synopjune18 <- synop %>% filter(Date == "2021-06-18")
 Synopjune22 <- synop %>% filter(Date == "2021-06-22" & EOS_no == "EOS_1" & Tract == 1)
@@ -311,13 +311,10 @@ pred <- as.data.frame(coords_df)
 synop_mainstem$lon_fit <- pred$lon
 synop_mainstem$lat_fit <- pred$lat
 #synop_mainstem<-synop_mainstem[,c("Date","EOS_no","Flux_ave","Point","CO2_ppm_ave","lon_fit","lat_fit")]
-synop_mainstem<-synop_mainstem[,c("Date","EOS_no","Flux_ave","Point","CO2_ppm_ave","adjusted_ppm","lon_fit","lat_fit")]
+synop_mainstem <- synop_mainstem[,c("lon_fit","lat_fit","Date","EOS_no","Flux_ave","Point","VaisalaType","CO2_ppm_ave","WaterTemp_c","BaroPress_kpa","AirTemp_c","Total_hPa","adjusted_ppm")]
 
 
 df_prediction <- full_join(df_prediction,synop_mainstem,by=c("lon_fit","lat_fit"))
-
-
-#Geomorph <- full_join(Geomorph,synop_2, by = c("lon_fit","lat_fit"))
 
 ```
 
@@ -435,5 +432,5 @@ ggplot(data=df_prediction%>%drop_na(Flux_ave), aes(dist, ele_fit, color=Date)) +
 
 ```{r write, echo=FALSE}
 
-write.csv(df_prediction, here::here("ProcessedData/GAVI_synoptic_2022-01-27.csv"))
+write.csv(df_prediction, here::here("ProcessedData/GAVI_synoptic_2022-02-14.csv"))
 ```
