--- a/KriddieFolder/COLM_Geomorphology_2021-12-09.Rmd
+++ b/KriddieFolder/COLM_Geomorphology_2021-12-09.Rmd
@@ -77,7 +77,8 @@ Geomorph <- rbind(Geomorph_July9,Geomorph)
 
 ```{r add synop to df}
 #synop <- read.csv(here::here("Synoptic/COLMILLO_2021-08-30.csv"))
-synop <- read.csv(here::here("Synoptic/COLMILLO_2022-01-27.csv"))
+#synop <- read.csv(here::here("Synoptic/COLMILLO_2022-01-27.csv"))
+synop <- read.csv(here::here("Synoptic/COLMILLO_2022-02-14.csv"))
 
 synop$X <- NULL
 
@@ -268,8 +269,7 @@ coords_df <- snap_df@coords
 pred <- as.data.frame(coords_df)
 synop$lon_fit <- pred$lon
 synop$lat_fit <- pred$lat
-synop <- synop[,c("Date","EOS_no","Flux_ave","Point","CO2_ppm_ave","adjusted_ppm","lon_fit","lat_fit")]
-
+synop <- synop[,c("Date","EOS_no","Flux_ave","Point","CO2_ppm_ave","adjusted_ppm","lon_fit","lat_fit","AirTemp_c","VaisalaType","Total_hPa","COLM_waterTempAve")]
 
 df_prediction <- full_join(df_prediction,synop,by=c("lon_fit","lat_fit"))
 
@@ -359,7 +359,7 @@ grid.arrange(flux, CO2, ncol=1)
 
 ```{r write, echo=FALSE}
 
-write.csv(df_prediction, here::here("ProcessedData/COLMILLO_synoptic_2022-01-27.csv"))
+#write.csv(df_prediction, here::here("ProcessedData/COLMILLO_synoptic_2022-02-14.csv"))
 ```
 
 
