--- a/KriddieFolder/GAVI_Geomorphology_2022-02-16.Rmd
+++ b/KriddieFolder/GAVI_Geomorphology_2022-02-16.Rmd
@@ -297,6 +297,7 @@ We also need to snap the synoptic df (for later)
 ```{r snap synop pts}
 synop_mainstem <- synop_mainstem #%>% filter(lat <= -.327)
 
+
 x <- SpatialPoints(synop_mainstem[,c(1:2)])
 y <- SpatialPoints(df_prediction[,c(1:2)]) 
 plot(x, col = "red")
@@ -335,54 +336,6 @@ fig <- plot_ly(df_prediction, x = ~dist, y = ~ele, size = 1)
 fig
 ```
 
-```{r another spline, echo=FALSE}
-df_prediction <- df_prediction #%>% filter(dist > 0)
-
-model <- lm(ele~bs(dist,
-                   knots = c(395), 
-                   degree = 10),
-            data=df_prediction)
-
-distlims <- range(df_prediction$dist)
-dist.grid <- seq(from=distlims[1],to=distlims[2], by=.1)
-pred <-predict(model,newdata=list(dist=dist.grid),se=T)
-
-plot(df_prediction$dist,df_prediction$ele)
-lines(dist.grid,pred$fit,col='red',lwd=3)
-
-dist <- dist.grid
-ele <- pred$fit
-ele_fit<-as.data.frame(dist)
-ele_fit$ele <- ele
-
-```
-
-```{r interpolate spline, echo=FALSE}
-
-fit <- lm(ele~bs(dist,
-                   knots = c(395), 
-                   degree = 10),
-            data=df_prediction)
-
-distlims <- range(df_prediction$dist)
-
-
-pred1 <- predict(fit, data.frame(dist = df_prediction$dist), se = TRUE)
-
-df_prediction$ele_fit <- pred1$fit
-
-ggplot(data=df_prediction%>%drop_na(Flux_ave), aes(dist, ele_fit, color=adjusted_ppm)) +
-  geom_point()
-
-
-GAVI_co2 <- ggplot(data=df_prediction) +
-  geom_line(aes(dist, ele_fit), size = 3, color="brown", alpha=.5) +
-  geom_point(data=df_prediction%>%drop_na(Flux_ave)
-             , aes(dist, ele_fit, color= CO2_ppm_ave),size=5)
-
-
-
-```
 
 I think it would be better if we did two different prediction above and below gavi
 
@@ -393,19 +346,47 @@ But maybe just because data is not great. please revisit
 
 ok i did revisit, and I think this is better now
 
-```{r diff way}
+```{r diff 1 way}
 
-df_prediction <- df_prediction %>% filter(dist > 13.5)
+df_prediction_1 <- df_prediction %>% filter(dist > 770)
+distlims <- range(df_prediction_1$dist)
+fit <- loess(ele ~ dist, degree=2, span = 0.2, data=df_prediction_1)
+pred1 <- predict(fit, data.frame(dist = df_prediction_1$dist), se = TRUE)
+df_prediction_1$ele_fit <- pred1$fit
 
-
-fit <- loess(ele ~ dist, degree=2, span = 0.15, data=df_prediction)
-
-df_prediction %>% 
+df_prediction_1 %>% 
   drop_na(ele) %>%
   mutate(smooth = fit$fitted) %>%
   ggplot(aes(dist, ele)) +
   geom_point(size = 3, alpha = .5, color = "grey") +
   geom_line(aes(dist, smooth), color="red")
+
+fig <- plot_ly(df_prediction_1, x = ~dist, y = ~ele_fit, size = 1)
+fig
+
+
+```
+
+```{r diff 2 way}
+
+df_prediction_2 <- df_prediction %>% filter(dist < 600)
+
+distlims <- range(df_prediction_2$dist)
+fit <- loess(ele ~ dist, degree=2, span = 0.2, data=df_prediction_2)
+pred1 <- predict(fit, data.frame(dist = df_prediction_2$dist), se = TRUE)
+df_prediction_2$ele_fit <- pred1$fit
+
+df_prediction_2 %>% 
+  drop_na(ele) %>%
+  mutate(smooth = fit$fitted) %>%
+  ggplot(aes(dist, ele)) +
+  geom_point(size = 3, alpha = .5, color = "grey") +
+  geom_line(aes(dist, smooth), color="red")
+
+fig <- plot_ly(df_prediction_2, x = ~dist, y = ~ele_fit, size = 1)
+fig
+
+
 
 
 ```
@@ -413,20 +394,21 @@ df_prediction %>%
 take the loess spline and make a data frame that interpolates these data points
 
 ```{r interpolate loess, echo=FALSE}
-
+#save <- df_prediction
+df_prediction <- rbind(df_prediction_1, df_prediction_2)
 #fit <- loess(ele ~ dist, degree=2, span = 0.30, data=df_prediction)
 #distlims <- range(df_prediction$dist)
+#fit <- loess(ele ~ dist, degree=2, span = 0.2, data=df_prediction)
 
+#pred1 <- predict(fit, data.frame(dist = df_prediction$dist), se = TRUE)
 
-pred1 <- predict(fit, data.frame(dist = df_prediction$dist), se = TRUE)
-
-df_prediction$ele_fit <- pred1$fit
+#df_prediction$ele_fit <- pred1$fit
 
 ggplot(data=df_prediction%>%drop_na(Flux_ave), aes(dist, ele_fit, color=Date)) +
   geom_point()
 
-#ggplot(data=df_prediction, aes(dist, ele_fit, col="CO2_ppm_ave")) +
- # geom_point(size = 3, alpha = .5, color = "blue")
+ggplot(data=df_prediction, aes(dist, ele_fit, col="CO2_ppm_ave")) +
+  geom_point(size = 3, alpha = .5, color = "blue")
 
 fig <- plot_ly(df_prediction, x = ~dist, y = ~ele_fit, size = 1)
 fig
@@ -437,57 +419,39 @@ fig
 
 ```{r interpolate loess, echo=FALSE}
 #save <- df_prediction
-#df_prediction <- save
-
-#fit <- loess(ele ~ dist, degree=2, span = 0.30, data=df_prediction)
-fit <- loess(ele ~ dist, degree=2, span = 0.20, data=df_prediction)
-distlims <- range(df_prediction$dist)
-
-pred1 <- predict(fit, data.frame(dist = df_prediction$dist), se = TRUE)
-
-df_prediction$ele_fit <- pred1$fit
+df_prediction <- save
 
 ##fix downstream
-up <- which.min(abs(df_prediction$dist-429))
-down <- which.min(abs(df_prediction$dist-434))
+up <- which.min(abs(df_prediction$dist-33.5))
+down <- which.min(abs(df_prediction$dist-31.5))
 
 slope <- (df_prediction[down,"ele_fit"] - df_prediction[up,"ele_fit"])/(df_prediction[down,"dist"] - df_prediction[up,"dist"])
 b = df_prediction[up,"ele_fit"] - slope*df_prediction[up,"dist"]
-df_prediction_a <- df_prediction %>% filter(dist > df_prediction[up,"dist"])
-df_prediction_b <- df_prediction %>% filter(dist < df_prediction[up,"dist"])
+df_prediction_a <- df_prediction %>% filter(dist < df_prediction[up,"dist"])
+df_prediction_b <- df_prediction %>% filter(dist > df_prediction[up,"dist"])
 df_prediction_a$ele_fit <- slope*df_prediction_a$dist + b
 df_prediction <- rbind(df_prediction_a,df_prediction_b)
 rm(df_prediction_a,df_prediction_b)
 ##
 
+```
+
+
+
+```{r save  later, echo=FALSE}
+fig <- plot_ly(df_prediction, x = ~dist, y = ~ele_fit, size = 1)
+fig
 ## there are problems in the middle too. 
 
-up <- which.min(abs(df_prediction$dist-347))
-down <- which.min(abs(df_prediction$dist-355))
+up <- which.min(abs(df_prediction$dist-91.6))
+down <- which.min(abs(df_prediction$dist-74))
 
 slope <- (df_prediction[down,"ele_fit"] - df_prediction[up,"ele_fit"])/(df_prediction[down,"dist"] - df_prediction[up,"dist"])
 b = df_prediction[up,"ele_fit"] - slope*df_prediction[up,"dist"]
 df_prediction_a <- df_prediction %>% 
-  filter(dist > df_prediction[up,"dist"] & dist < df_prediction[down,"dist"])
+  filter(dist > df_prediction[down,"dist"] & dist < df_prediction[up,"dist"])
 df_prediction_b <- df_prediction %>% 
-  filter(dist < df_prediction[up,"dist"] | dist > df_prediction[down,"dist"])
-df_prediction_a$ele_fit <- slope*df_prediction_a$dist + b
-df_prediction <- rbind(df_prediction_a,df_prediction_b)
-rm(df_prediction_a,df_prediction_b)
-
-##
-
-## there are problems in the middle too. 
-
-up <- which.min(abs(df_prediction$dist-375))
-down <- which.min(abs(df_prediction$dist-391))
-
-slope <- (df_prediction[down,"ele_fit"] - df_prediction[up,"ele_fit"])/(df_prediction[down,"dist"] - df_prediction[up,"dist"])
-b = df_prediction[up,"ele_fit"] - slope*df_prediction[up,"dist"]
-df_prediction_a <- df_prediction %>% 
-  filter(dist > df_prediction[up,"dist"] & dist < df_prediction[down,"dist"])
-df_prediction_b <- df_prediction %>% 
-  filter(dist < df_prediction[up,"dist"] | dist > df_prediction[down,"dist"])
+  filter(dist > df_prediction[up,"dist"] | dist < df_prediction[down,"dist"])
 df_prediction_a$ele_fit <- slope*df_prediction_a$dist + b
 df_prediction <- rbind(df_prediction_a,df_prediction_b)
 rm(df_prediction_a,df_prediction_b)
@@ -496,15 +460,81 @@ rm(df_prediction_a,df_prediction_b)
 
 ## there are problems in the middle too. 
 
-up <- which.min(abs(df_prediction$dist-240))
-down <- which.min(abs(df_prediction$dist-250.0963))
+up <- which.min(abs(df_prediction$dist-304))
+down <- which.min(abs(df_prediction$dist-242))
 
 slope <- (df_prediction[down,"ele_fit"] - df_prediction[up,"ele_fit"])/(df_prediction[down,"dist"] - df_prediction[up,"dist"])
 b = df_prediction[up,"ele_fit"] - slope*df_prediction[up,"dist"]
 df_prediction_a <- df_prediction %>% 
-  filter(dist > df_prediction[up,"dist"] & dist < df_prediction[down,"dist"])
+  filter(dist > df_prediction[down,"dist"] & dist < df_prediction[up,"dist"])
 df_prediction_b <- df_prediction %>% 
-  filter(dist < df_prediction[up,"dist"] | dist > df_prediction[down,"dist"])
+  filter(dist > df_prediction[up,"dist"] | dist < df_prediction[down,"dist"])
+df_prediction_a$ele_fit <- slope*df_prediction_a$dist + b
+df_prediction <- rbind(df_prediction_a,df_prediction_b)
+rm(df_prediction_a,df_prediction_b)
+
+## there are problems in the middle too. 
+
+up <- which.min(abs(df_prediction$dist-900))
+down <- which.min(abs(df_prediction$dist-863))
+
+slope <- (df_prediction[down,"ele_fit"] - df_prediction[up,"ele_fit"])/(df_prediction[down,"dist"] - df_prediction[up,"dist"])
+b = df_prediction[up,"ele_fit"] - slope*df_prediction[up,"dist"]
+df_prediction_a <- df_prediction %>% 
+  filter(dist > df_prediction[down,"dist"] & dist < df_prediction[up,"dist"])
+df_prediction_b <- df_prediction %>% 
+  filter(dist > df_prediction[up,"dist"] | dist < df_prediction[down,"dist"])
+df_prediction_a$ele_fit <- slope*df_prediction_a$dist + b
+df_prediction <- rbind(df_prediction_a,df_prediction_b)
+rm(df_prediction_a,df_prediction_b)
+
+##
+
+## there are problems in the middle too. 
+
+up <- which.min(abs(df_prediction$dist-842))
+down <- which.min(abs(df_prediction$dist-797))
+
+slope <- (df_prediction[down,"ele_fit"] - df_prediction[up,"ele_fit"])/(df_prediction[down,"dist"] - df_prediction[up,"dist"])
+b = df_prediction[up,"ele_fit"] - slope*df_prediction[up,"dist"]
+df_prediction_a <- df_prediction %>% 
+  filter(dist > 772 & dist < df_prediction[up,"dist"])
+df_prediction_b <- df_prediction %>% 
+  filter(dist > df_prediction[up,"dist"] | dist < 772)
+df_prediction_a$ele_fit <- slope*df_prediction_a$dist + b
+df_prediction <- rbind(df_prediction_a,df_prediction_b)
+rm(df_prediction_a,df_prediction_b)
+
+##
+
+
+## there are problems in the middle too. 
+
+up <- which.min(abs(df_prediction$dist-1038))
+down <- which.min(abs(df_prediction$dist-986))
+
+slope <- (df_prediction[down,"ele_fit"] - df_prediction[up,"ele_fit"])/(df_prediction[down,"dist"] - df_prediction[up,"dist"])
+b = df_prediction[up,"ele_fit"] - slope*df_prediction[up,"dist"]
+df_prediction_a <- df_prediction %>% 
+  filter(dist > df_prediction[down,"dist"] & dist < df_prediction[up,"dist"])
+df_prediction_b <- df_prediction %>% 
+  filter(dist > df_prediction[up,"dist"] | dist < df_prediction[down,"dist"])
+df_prediction_a$ele_fit <- slope*df_prediction_a$dist + b
+df_prediction <- rbind(df_prediction_a,df_prediction_b)
+rm(df_prediction_a,df_prediction_b)
+
+
+## there are problems in the middle too. 
+
+up <- which.min(abs(df_prediction$dist-948.7))
+down <- which.min(abs(df_prediction$dist-946.3))
+
+slope <- (df_prediction[down,"ele_fit"] - df_prediction[up,"ele_fit"])/(df_prediction[down,"dist"] - df_prediction[up,"dist"])
+b = df_prediction[up,"ele_fit"] - slope*df_prediction[up,"dist"]
+df_prediction_a <- df_prediction %>% 
+  filter(dist > df_prediction[down,"dist"] & dist < df_prediction[up,"dist"])
+df_prediction_b <- df_prediction %>% 
+  filter(dist > df_prediction[up,"dist"] | dist < df_prediction[down,"dist"])
 df_prediction_a$ele_fit <- slope*df_prediction_a$dist + b
 df_prediction <- rbind(df_prediction_a,df_prediction_b)
 rm(df_prediction_a,df_prediction_b)
@@ -514,6 +544,8 @@ rm(df_prediction_a,df_prediction_b)
 
 keep wrking on this GAVI
 ```{r calc slope, echo=FALSE}
+
+df_prediction <- df_prediction[order(df_prediction$dist),]
 
 df_prediction$slope <- NA
 for(i in 1:nrow(df_prediction)) {       # for-loop over rows
@@ -525,7 +557,8 @@ df_prediction$slope <- (df_prediction$ele_fit - df_prediction$ele_down)/(df_pred
 df_prediction$dist_down <- NULL
 df_prediction$ele_down <- NULL
 
-#df_predictionblah <- df_prediction%>%filter(slope>0)
+df_predictionblah <- df_prediction%>%filter(slope<0)
+
 
 ###
 df_prediction <- df_prediction[order(df_prediction$dist),]
@@ -554,5 +587,6 @@ df_prediction <- loop
 
 ```{r write, echo=FALSE}
 
-write.csv(df_prediction, here::here("ProcessedData/GAVI_synoptic_2022-02-14.csv"))
+write.csv(df_prediction, here::here("ProcessedData/GAVI_synoptic_2022-02-16.csv"))
 ```
+
